# gtk4-test

./: README.md  meson.build  org.IDN.TestApplication.json
data/: meson.build  org.IDN.TestApplication.desktop.in  org.IDN.TestApplication.gschema.xml  org.IDN.TestApplication.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  testapplication-application.c  testapplication-application.h  testapplication-window.c  testapplication-window.h  testapplication-window.ui  testapplication.gresource.xml
